--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,7 +13,7 @@
   <header>
     <div class="mt-5">
       <h1 class="text-center">URL Shortener</h1>
-      <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" class="rounded mx-auto d-block w-25" alt="linkImg">
+      <a href="/"><img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" class="rounded mx-auto d-block w-25" alt="linkImg"></a>
     </div>
   </header>
   <main>
