feat: add mongoose data

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 {{#if url}}
 <div class="alert alert-info mt-5 center-pos" role="alert">
-  <span class="mr-2">Success! Please use this link:</span> <a href="{{ shorterLink }}">{{ url }}</a>
+  <span class="mr-2">Success! Please use this link:</span> <a href="{{ url }}">{{ shorterLink }}</a>
 </div>
 {{/if}}
 <form method="POST" action="/" >
