feat: add index.hbs error message

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,14 @@
+<form method="POST" action="/">
 {{#if url}}
 <div class="alert alert-info mt-5 center-pos" role="alert">
   <span class="mr-2">Success! Please use this link:</span> <a href="{{ url }}">{{ shorterLink }}</a>
 </div>
 {{/if}}
-<form method="POST" action="/" >
+{{#if errorMessage}}
+<div class="alert alert-danger mt-5 center-pos" role="alert">
+  <span class="mr-2">{{ errorMessage }}</span>
+</div>
+{{/if}}
   <div class="form-floating mt-5 center-pos">
     <input type="text" class="form-control url-input" id="url" name="url" placeholder="name@example.com" value="{{ url }}">
     <label for="url" class="center-pos">Enter URL</label>
