--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,5 +22,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
     integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/7df85620a8.js" crossorigin="anonymous"></script>
 </body>
 </html>
