feat: add README.md

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
   <div class="alert alert-info mt-4 alert-pos" role="alert">
     <span class="mr-2">Success! Please use this link:</span>
     <div>
-      <a href="{{ url }}" id="url">{{ shorterLink }}</a><i class="fa-solid fa-copy copy-icon" id="copy-icon"></i>
+      <a href="{{ url }}" id="url" target="_blank">{{ shorterLink }}</a><i class="fa-solid fa-copy copy-icon" id="copy-icon"></i>
     </div>
   </div>
 </div>
